--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^11.11.15",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "sweetalert2": "^11.6.13"
