--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.11.15",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "motion": "^11.11.15",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
